Tweaked stylesheets to allow a little more vertical space between lines of text. Also tweaked paragraph margins to fix problems with text in paragraphs inside table cells not lining up properly (got rid of top paragraph margin and instead only use bottom paragraph margin to give spacing between paragraphs).
[SVN r39494]

--- a/doc/style/html/general.css
+++ b/doc/style/html/general.css
@@ -55,7 +55,8 @@
     {
         text-align: left;
         font-size: 10pt; 
-        line-height: 1.15;
+        line-height: 1.3;
+	margin: 0em 0em 0.8em 0em;
     }
 
 
