--- a/doc/style/html/lists.css
+++ b/doc/style/html/lists.css
@@ -60,7 +60,7 @@
         padding: 0em 2em 0em 0em;
         font-size: 10pt;
         margin: 0em 0em 0.5em 0em;
-        line-height: 1;
+        line-height: 1.3;
     }
 
     /* Make the terms in definition lists bold */
